--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.2",
     "jwt-decode": "^4.0.0",
     "next": "^14.1.4",
+    "next-intl": "^3.23.5",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.4"
