--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^41.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^43.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "jwt-decode": "^4.0.0",
     "next": "^14.1.4",
+    "next-intl": "^3.23.3",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.4"
