--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^4.0.0",
     "next": "^14.1.4",
     "next-intl": "^3.23.3",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.4"
