--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^43.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
+    "@mui/styled-engine-sc": "^6.1.6",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "next": "^14.1.4",
     "next-intl": "^3.23.3",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.0.4"
+    "react-redux": "^9.0.4",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "eslint": "^8",
